--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "serve": "vite preview"
+    "preview": "vite build && vite preview"
   },
   "keywords": [],
   "author": "",
