--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # Npm modules can be ignored since package-lock.json provides the same functionality without pushing and pulling heavy folders around
 node_modules
 dist
+.vscode
