--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,11 @@
 {
   "presets": [
     ["@babel/preset-env", {
+      "modules": false,  // Keep ES6 modules
       "targets": "> 0.25%, not dead"
     }],
-    "@babel/preset-react"
+    ["@babel/preset-react", {
+      "runtime": "automatic"  // For React 17+
+    }]
   ]
 }
